fix(styles): adjust animation timing and display properties for improved message visibility

--- a/css/login_msg.css
+++ b/css/login_msg.css
@@ -3,12 +3,13 @@
   border-radius: 16px;
   width: 90%;
   height: 74px;
+  display: none;
   align-items: center;
   justify-content: center;
   opacity: 0;
   position: absolute;
   top: 32px;
-  animation: slideInResponsive 2750ms ease-in-out;
+  animation: slideInResponsive 2750ms 750ms ease-in-out;
 }
 
 .msg {
@@ -21,28 +22,30 @@
 
 @media (min-width: 768px) {
   .msg__Box {
+    display: flex;
     width: 400px;
   }
 }
 
 @media (max-width: 767px) {
   .msg__Box {
-    animation: slideInResponsive 2750ms ease-in-out;
+    display: flex;
+    animation: slideInResponsive 2750ms 750ms ease-in-out;
   }
 }
 
 @keyframes slideInResponsive {
   0% {
     display: flex;
-    transform: translateY(-100px);
+    transform: translateY(0);
     opacity: 0;
   }
   50% {
-    transform: translateY(250px);
+    transform: translateY(500%);
     opacity: 1;
   }
   100% {
-    transform: translateY(500px);
+    transform: translateY(1000%);
     opacity: 0;
     display: none;
   }
